added JSONP support

--- a/netbeans_projects/SmartMeter/nbproject/project.properties
+++ b/netbeans_projects/SmartMeter/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=
 excludes=
 file.reference.derby.jar=${var.JES_HOME}/javadb/lib/derby.jar
 file.reference.glassfish-jes.jar=${var.JES_HOME}/glassfish/lib/glassfish-jes.jar
+file.reference.jersey-json.jar=${var.JES_HOME}/jersey/lib/jersey-json.jar
 file.reference.jsr311-api.jar=${var.JES_HOME}/jersey/lib/jsr311-api.jar
 file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
 includes=**
@@ -37,7 +38,8 @@ javac.classpath=\
     ${file.reference.glassfish-jes.jar}:\
     ${file.reference.derby.jar}:\
     ${file.reference.jsr311-api.jar}:\
-    ${file.reference.RXTXcomm.jar}
+    ${file.reference.RXTXcomm.jar}:\
+    ${file.reference.jersey-json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
